sold unsold logic

--- a/index.html
+++ b/index.html
@@ -333,6 +333,138 @@
         text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
       }
 
+      /* Enhanced Sold/Unsold Stamp Overlay */
+      .auction-stamp-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.85);
+        z-index: 10000;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        animation: fadeIn 0.5s ease-in-out;
+      }
+
+      .auction-stamp {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+        animation: stampDrop 1.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      }
+
+      /* Sold Stamp Styles */
+      .sold-stamp {
+        background: linear-gradient(135deg, #27ae60, #2ecc71, #58d68d);
+        border: 8px solid #1e8449;
+        color: white;
+        padding: 40px 60px;
+        border-radius: 25px;
+        font-size: 72px;
+        font-weight: 900;
+        text-transform: uppercase;
+        letter-spacing: 8px;
+        transform: rotate(-12deg);
+        box-shadow: 0 0 0 4px #27ae60, 0 30px 60px rgba(39, 174, 96, 0.6),
+          inset 0 8px 16px rgba(255, 255, 255, 0.2);
+        text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+        position: relative;
+        overflow: hidden;
+      }
+
+      /* Unsold Stamp Styles */
+      .unsold-stamp {
+        background: linear-gradient(135deg, #e74c3c, #c0392b, #ec7063);
+        border: 8px solid #a93226;
+        color: white;
+        padding: 40px 60px;
+        border-radius: 25px;
+        font-size: 64px;
+        font-weight: 900;
+        text-transform: uppercase;
+        letter-spacing: 6px;
+        transform: rotate(8deg);
+        box-shadow: 0 0 0 4px #e74c3c, 0 30px 60px rgba(231, 76, 60, 0.6),
+          inset 0 8px 16px rgba(255, 255, 255, 0.2);
+        text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+        position: relative;
+        overflow: hidden;
+      }
+
+      /* Team Name Display for Sold Players */
+      .sold-team-name {
+        background: rgba(255, 255, 255, 0.95);
+        color: #2c3e50;
+        padding: 20px 40px;
+        border-radius: 15px;
+        font-size: 36px;
+        font-weight: 800;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        box-shadow: 0 15px 35px rgba(0, 0, 0, 0.4);
+        border: 3px solid #27ae60;
+        text-align: center;
+        min-width: 400px;
+      }
+
+      /* Stamp Glow Effect */
+      .sold-stamp::before,
+      .unsold-stamp::before {
+        content: "";
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        background: linear-gradient(
+          45deg,
+          transparent,
+          rgba(255, 255, 255, 0.1),
+          transparent
+        );
+        animation: shimmer 2s infinite;
+        pointer-events: none;
+      }
+
+      /* Animations */
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      @keyframes stampDrop {
+        0% {
+          transform: translateY(-200px) scale(0.5);
+          opacity: 0;
+        }
+        50% {
+          transform: translateY(50px) scale(1.1);
+          opacity: 0.8;
+        }
+        100% {
+          transform: translateY(0) scale(1);
+          opacity: 1;
+        }
+      }
+
+      @keyframes shimmer {
+        0% {
+          transform: translateX(-100%) translateY(-100%);
+        }
+        100% {
+          transform: translateX(100%) translateY(100%);
+        }
+      }
+
       .auction-status {
         position: absolute;
         top: -45px;
@@ -476,6 +608,18 @@
         .bid-amount {
           font-size: 32px;
         }
+
+        .sold-stamp,
+        .unsold-stamp {
+          font-size: 48px;
+          padding: 30px 45px;
+        }
+
+        .sold-team-name {
+          font-size: 28px;
+          padding: 15px 30px;
+          min-width: 300px;
+        }
       }
 
       @media (max-width: 768px) {
@@ -547,6 +691,25 @@
         .current-bid-display {
           padding: 15px 18px;
         }
+
+        .sold-stamp,
+        .unsold-stamp {
+          font-size: 36px;
+          padding: 25px 35px;
+        }
+
+        .sold-team-name {
+          font-size: 24px;
+          padding: 12px 25px;
+          min-width: 250px;
+        }
+      }
+
+      .stamp-img {
+        width: 520px; /* tweak as required */
+        height: 320px;
+        filter: drop-shadow(0 8px 18px rgba(0, 0, 0, 0.5));
+        animation: stampDrop 1.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
       }
     </style>
   </head>
@@ -650,6 +813,14 @@
           </div>
         </div>
       </div>
+
+      <!-- Sold/Unsold Stamp Overlay -->
+      <div class="auction-stamp-overlay" id="stampOverlay">
+        <div class="auction-stamp" id="stampContainer">
+          <!-- Stamp content will be dynamically inserted here -->
+        </div>
+      </div>
+
       <div class="watermark-logo">
         <img src="assets/sportyfy.jpeg" alt="Watermark" id="watermarkImage" />
       </div>
@@ -661,18 +832,25 @@
           this.apiBaseUrl = "https://sportsdecor.somee.com/api/Auction/state/";
           this.tournamentId = this.getTournamentIdFromUrl();
           this.currentData = null;
+          this.currentPlayerId = null; // Store current player ID
+          this.isShowingStamp = false; // Flag to prevent overlapping stamps
 
           this.loadAuctionData();
 
           // Set up periodic refresh every 2 seconds
           setInterval(() => {
-            this.loadAuctionData();
+            if (!this.isShowingStamp) {
+              // Only refresh if not showing stamp
+              this.loadAuctionData();
+            }
           }, 2000);
 
           window.addEventListener("message", (event) => {
             if (event.data.type === "PLAYER_CHANGE") {
               console.log("Received player change notification");
-              this.loadAuctionData();
+              if (!this.isShowingStamp) {
+                this.loadAuctionData();
+              }
             }
           });
         }
@@ -706,8 +884,10 @@
                 return; // Don't update UI if tournamentId is 0
               }
 
+              // Check for player change before updating display
+              await this.checkPlayerChange(result.data);
+
               this.currentData = result.data;
-              this.updateDisplay(result.data);
               this.updateLoadingIndicator("Connected");
 
               setTimeout(() => {
@@ -719,6 +899,100 @@
             console.error("Error loading auction data:", error);
             this.updateLoadingIndicator("Connection Error");
           }
+        }
+
+        async checkPlayerChange(newData) {
+          // If we have a current player ID and it's different from the new one
+          if (
+            this.currentPlayerId &&
+            this.currentPlayerId !== newData.playerId
+          ) {
+            console.log(
+              `Player changed from ${this.currentPlayerId} to ${newData.playerId}`
+            );
+            // Check if the previous player was sold
+            if (
+              newData.lastPlayerSoldToTeam &&
+              newData.lastPlayerSoldToTeam !== "0" &&
+              newData.lastPlayerSoldToTeam !== null
+            ) {
+              // Player was SOLD - find team name
+              const soldTeam = this.findTeamNameById(
+                newData.lastPlayerSoldToTeam,
+                newData.wallets
+              );
+              await this.showSoldStamp(soldTeam);
+            } else {
+              // Player was UNSOLD
+              await this.showUnsoldStamp();
+            }
+          }
+
+          // Update current player ID
+          this.currentPlayerId = newData.playerId;
+
+          // Update display with new player data
+          this.updateDisplay(newData);
+        }
+
+        findTeamNameById(teamId, wallets) {
+          if (!wallets || wallets.length === 0) {
+            return "Unknown Team";
+          }
+
+          const team = wallets.find(
+            (wallet) => wallet.teamId.toString() === teamId.toString()
+          );
+          return team ? team.teamName : "Unknown Team";
+        }
+
+        async showSoldStamp(teamName) {
+          return new Promise((resolve) => {
+            this.isShowingStamp = true;
+            const overlay = document.getElementById("stampOverlay");
+            const container = document.getElementById("stampContainer");
+            container.innerHTML = ""; // reset
+
+            /* 1️⃣  stamp image */
+            const img = document.createElement("img");
+            img.src = "assets/sold-stamp.png";
+            img.className = "stamp-img";
+            container.appendChild(img);
+
+            /* 2️⃣  team name bar (unchanged) */
+            const teamDiv = document.createElement("div");
+            teamDiv.className = "sold-team-name";
+            teamDiv.textContent = teamName;
+            container.appendChild(teamDiv);
+
+            overlay.style.display = "flex";
+            setTimeout(() => {
+              overlay.style.display = "none";
+              this.isShowingStamp = false;
+              resolve();
+            }, 3000);
+          });
+        }
+
+        async showUnsoldStamp() {
+          return new Promise((resolve) => {
+            this.isShowingStamp = true;
+            const overlay = document.getElementById("stampOverlay");
+            const container = document.getElementById("stampContainer");
+            container.innerHTML = "";
+
+            const img = document.createElement("img");
+            img.src = "assets/unsold.png";
+            img.className = "stamp-img";
+            container.appendChild(img);
+
+            overlay.style.display = "flex";
+            setTimeout(() => {
+              overlay.style.display = "none";
+              this.isShowingStamp = false;
+              resolve();
+            }, 2500);
+          });
         }
 
         updateDisplay(data) {
