--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
       setupOverlayButton() {
         const overlayButton = document.getElementById("overlayButton");
         if (overlayButton) {
-          const overlayUrl = `https://ovsoverlaysportyfy.netlify.app/?tournamentId=${this.tournamentId}`;
+          const overlayUrl = `https://sportyfypool.netlify.app/?tournamentId=${this.tournamentId}`;
           overlayButton.href = overlayUrl;
         }
       }
